# SNWriter

./: CMakeLists.txt  README_PACKAGING.md  package.sh  test_script.sh
scripts/: copy_libs.sh
src/: BinaryPatcher.cpp  BinaryPatcher.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
